-
Bug
-
Resolution: Done
-
P2: Important
-
5.4.0 RC
-
None
-
MacOS-X Yosemite
-
4ffa4cbdad93a31ef7d9712d3d91777510a1a17d
Custom cursors (CSS cursor property) are not working, i.e. no cursor shown. Doesn't matter whether cursors are in .cur or .png format. Works in any other browser as expected.
Also as a side note, some pre-defined css cursors like "progress" aren't working either.