Support custom mouse cursors

Task-number: QTBUG-43009
Change-Id: Ic36554c5137a55d9d4b9143c204d9d4400e23ff8
Reviewed-by: Joerg Bornemann <joerg.bornemann@theqtcompany.com>